testing webkit-scrollbar fix

--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,12 @@ p {
   display: flex;
 }
 
+.routesContainer::-webkit-scrollbar {
+  display: none;
+  width:0;
+  height: 0;
+}
+
 .navbar {
   position: absolute;
   top: 0;
